--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,18 @@ Package: TESAcarbon
 Type: Package
 Title: Carbon Footprint of TESA Activities
 Version: 0.1.0
-Author: Daniel Duplisea
+Authors: Daniel Duplisea, Martin Pastoors
 Maintainer: Daniel Duplisea <daniel.duplisea@dfo-mpo.gc.ca>
 Description: A R package to calculate the carbon footprint of TESA activities accounting for travel, accommodation and food
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Depends: 
+  data.table,
+  ggplot2,
+  maps,
+  geosphere,
+  cowplot,
+  ggrepel
+Suggests:
 RoxygenNote: 6.1.1
